RESOLVED FIXED283127
REGRESSION(265569@main): Fix division by zero in calculating the boundingRect of a QuadraticCurve
https://bugs.webkit.org/show_bug.cgi?id=283127
Summary REGRESSION(265569@main): Fix division by zero in calculating the boundingRect...
Said Abou-Hallawa
Reported 2024-11-14 13:10:21 PST
This function calculates the vertex of a QuadraticCurve. p0, p1 and p2 represent the currentPoint, controlPoint and endPoint respectively. float calculateQuadraticExtremity(float p0, float p1, float p2) { float t = (p0 - p1) / (p0 - 2 * p1 + p2); return calculateQuadratic(t, p0, p1, p2); } If the QuadraticCurve is symmetric, the control point is be the mid-point between the currentPoint and the endPoint. In this case (p0 - 2 * p1 + p2) is equal to zero.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-11-14 13:12:16 PST
Said Abou-Hallawa
Comment 2 2024-11-14 13:22:35 PST
EWS
Comment 3 2024-11-14 15:54:43 PST
Committed 286618@main (dae159bae231): <https://commits.webkit.org/286618@main> Reviewed commits have been landed. Closing PR #36653 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.