REGRESSION(265569@main): Fix division by zero in calculating the boundingRect of a QuadraticCurve https://bugs.webkit.org/show_bug.cgi?id=283127 rdar://139904014

Reviewed by Simon Fraser.

Avoid dividing by zero if the controlPoint is the mid-point of the currentPoint
and the endPoint.

* Source/WebCore/platform/graphics/Path.h:
* Source/WebCore/platform/graphics/PathSegmentData.cpp:
(WebCore::calculateQuadraticExtremity):
* Tools/TestWebKitAPI/Tests/WebCore/PathTests.cpp:
(TestWebKitAPI::TEST(Path, CurveBoundingRect)):

Canonical link: https://commits.webkit.org/286618@main